<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settingsRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="8dp"
            android:id="@+id/tvTitle"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:shadowRadius="5"
            android:shadowDx="5"
            android:shadowDy="6"
            android:shadowColor="#50A4E9"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginBottom="30dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_personal"
            app:shapeAppearanceOverlay="@style/CircleImageStyle"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <TextView
            android:layout_margin="10dp"
            android:id="@+id/labelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="—"
            android:gravity="center"
            android:layout_marginBottom="12dp" />

        <TextView
            android:id="@+id/labelAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_region"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="—"
            android:gravity="center"
            android:layout_marginBottom="12dp" />

        <TextView
            android:id="@+id/labelEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="—"
            android:gravity="center"
            android:layout_marginBottom="12dp" />

        <TextView
            android:id="@+id/labelPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_points"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="—"
            android:gravity="center"
            android:layout_marginBottom="12dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="#FFFFFF">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_qr_code"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="#115A95"
                    android:layout_marginBottom="8dp" />

                <ImageView
                    android:id="@+id/imgQr"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/user_qr" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/scan_to_recycle"
                    android:textSize="12sp"
                    android:textColor="#888" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/scanQrBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/scan_qr_code"
            android:elevation="4dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="@drawable/bg_light"
            android:textColor="@color/black"
            android:backgroundTint="#115A95"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logout_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:elevation="4dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/bg_light"
                android:textColor="@color/black"
                android:backgroundTint="#115A95"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="24dp"
                android:paddingVertical="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_account2"
                android:elevation="4dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/bg_light"
                android:textColor="@color/black"
                android:backgroundTint="#115A95"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="24dp"
                android:paddingVertical="12dp"
                app:layout_constraintTop_toBottomOf="@+id/logout_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>