<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="14dp"
    app:cardElevation="8dp"
    android:backgroundTint="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:gravity="center_vertical">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/imgPoints"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:layout_marginEnd="12dp"
            android:contentDescription="Points icon"
            app:lottie_rawRes="@raw/wallet"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_2025_10_15"
                android:textStyle="bold"
                android:textColor="#2E7D32"
                android:textSize="16sp"
                android:layout_marginBottom="4dp" />

            <TextView
                android:id="@+id/tvPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points_redeemed_50"
                android:textSize="14sp"
                android:textColor="#444"
                android:layout_marginBottom="2dp" />

            <TextView
                android:id="@+id/tvAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount_25_egp"
                android:textSize="14sp"
                android:textColor="#444" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:text="@string/phonekan"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="12dp"/>
</androidx.cardview.widget.CardView>
