<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="14dp"
    app:cardElevation="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center_vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/imgIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:layout_marginEnd="12dp"
            android:contentDescription="Notification Icon"
            app:lottie_rawRes="@raw/areen_eco_earth_animation"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_reward"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#2E7D32"
                android:layout_marginBottom="2dp" />

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a_new_smart_bin_has_been_added_near_you"
                android:textSize="15sp"
                android:textColor="#6E3FBD"
                android:layout_marginBottom="4dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_unseen"
                    android:textSize="13sp"
                    android:textColor="#D32F2F" />
                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/_2025_10_17_12_00"
                    android:textSize="12sp"
                    android:textColor="#777" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
